--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -5,7 +5,6 @@
 .menu {
   background-color: $dark-colour;
   color: $light-colour;
-  padding: 6px;
 
   .toggle {
     display: none;
@@ -18,7 +17,7 @@
     justify-content: flex-end;
     border-right: solid 3px $highlight-colour;
     text-align: center;
-    padding: 1rem;
+    padding: 2rem;
 
     .burger {
       display: none;
@@ -31,6 +30,7 @@
 
   @include media-small {
     border-bottom: solid 3px $highlight-colour;
+    padding: 0.4rem;
 
     .photo,
     nav {
